samples/_failures_safe/1761313083_9ba3f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2f6e5b7.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_b2f6e5b7.c:168:9: error: expected declaration or statement at end of input
  168 |         parser_advance(parser);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b2f6e5b7.c:168:9: error: expected declaration or statement at end of input
